Moves to java 8